# libserialport

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  README  config.h.in  configure.ac  freebsd.c  libserialport.h  libserialport.pc.in  libserialport_internal.h  libserialport_version.h.in  linux.c  linux_termios.c  linux_termios.h  macosx.c  serialport.c  serialportConfig.cmake.in  test_timing.c  timing.c  windows.c
examples/: CMakeLists.txt  README  handle_errors.c  list_ports.c  send_receive.c
tests/: core.c  main.c  version.c
